feat: add controller to list tipo equipo
