# src/main/java/com/dliriotech/tms/fleetservice/controller/TipoEquipoController.java
@@ -1,6 +1,7 @@
 package com.dliriotech.tms.fleetservice.controller;
 
 import com.dliriotech.tms.fleetservice.dto.EsquemaEquipoResponse;
+import com.dliriotech.tms.fleetservice.dto.TipoEquipoResponse;
 import com.dliriotech.tms.fleetservice.service.EsquemaEquipoService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.MediaType;
