# src/main/resources/static/openapi.yaml
@@ -123,10 +123,12 @@ paths:
           $ref: '#/components/responses/NotFoundResponse'
         '500':
           $ref: '#/components/responses/ErrorResponse'
-    put:
+
+  /api/v1/equipos/{id}/configuracion:
+    patch:
       tags:
         - Equipos
-      summary: Actualiza un equipo existente
+      summary: Actualiza la configuración de un equipo existente
       operationId: updateEquipo
       parameters:
         - name: id
@@ -137,15 +139,48 @@ paths:
             type: integer
             format: int32
       requestBody:
-        description: Datos del equipo a actualizar
+        description: Datos de configuración del equipo a actualizar
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/EquipoRequest'
+              $ref: '#/components/schemas/EquipoUpdateRequest'
       responses:
         '200':
           description: Equipo actualizado correctamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EquipoResponse'
+        '404':
+          $ref: '#/components/responses/NotFoundResponse'
+        '500':
+          $ref: '#/components/responses/ErrorResponse'
+
+  /api/v1/equipos/{id}/kilometraje:
+    patch:
+      tags:
+        - Equipos
+      summary: Actualiza el kilometraje de un equipo
+      operationId: updateEquipoKilometraje
+      parameters:
+        - name: id
+          in: path
+          description: ID del equipo
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        description: Datos del nuevo kilometraje
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EquipoUpdateKilometrajeRequest'
+      responses:
+        '200':
+          description: Kilometraje del equipo actualizado correctamente
           content:
             application/json:
               schema:
@@ -167,7 +202,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/EquipoRequest'
+              $ref: '#/components/schemas/EquipoNuevoRequest'
       responses:
         '201':
           description: Equipo creado correctamente
@@ -187,39 +222,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          $ref: '#/components/responses/ErrorResponse'
-
-  /api/v1/equipos/{id}/estado/{estadoId}:
-    patch:
-      tags:
-        - Equipos
-      summary: Actualiza el estado de un equipo
-      operationId: updateEstadoEquipo
-      parameters:
-        - name: id
-          in: path
-          description: ID del equipo
-          required: true
-          schema:
-            type: integer
-            format: int32
-        - name: estadoId
-          in: path
-          description: ID del nuevo estado
-          required: true
-          schema:
-            type: integer
-            format: int32
-      responses:
-        '200':
-          description: Estado del equipo actualizado correctamente
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/EquipoResponse'
-        '404':
-          $ref: '#/components/responses/NotFoundResponse'
         '500':
           $ref: '#/components/responses/ErrorResponse'
 
@@ -343,6 +345,24 @@ paths:
         '500':
           $ref: '#/components/responses/ErrorResponse'
 
+  /api/v1/empresas/tipos-equipos-total:
+    get:
+      tags:
+        - Tipos de Equipos
+      summary: Obtiene todos los tipos de equipos
+      operationId: getAllTiposEquipo
+      responses:
+        '200':
+          description: Lista de todos los tipos de equipos
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TipoEquipoResponse'
+        '500':
+          $ref: '#/components/responses/ErrorResponse'
+
   /api/v1/empresas/{empresaId}/tipos-equipos-activos:
     get:
       tags:
@@ -441,7 +461,7 @@ components:
         - id
         - nombre
 
-    EquipoRequest:
+    EquipoNuevoRequest:
       type: object
       properties:
         placa:
@@ -454,12 +474,6 @@ components:
         esquemaEquipoId:
           type: integer
           format: int32
-        fechaInspeccion:
-          type: string
-          format: date
-        kilometraje:
-          type: integer
-          format: int32
         estadoId:
           type: integer
           format: int32
@@ -470,6 +484,36 @@ components:
         - placa
         - estadoId
         - empresaId
+
+    EquipoUpdateRequest:
+      type: object
+      properties:
+        placa:
+          type: string
+        negocio:
+          type: string
+        tipoEquipoId:
+          type: integer
+          format: int32
+        esquemaEquipoId:
+          type: integer
+          format: int32
+        estadoId:
+          type: integer
+          format: int32
+
+    EquipoUpdateKilometrajeRequest:
+      type: object
+      properties:
+        kilometrajeNuevo:
+          type: integer
+          format: int32
+        usuarioId:
+          type: integer
+          format: int32
+      required:
+        - kilometrajeNuevo
+        - usuarioId
 
     EquipoResponse:
       type: object
@@ -491,6 +535,9 @@ components:
         kilometraje:
           type: integer
           format: int32
+        fechaActualizacionKilometraje:
+          type: string
+          format: date
         estadoEquipoResponse:
           $ref: '#/components/schemas/EstadoEquipoResponse'
         empresaId:
